# mirai-common-robot

./: CMakeLists.txt  build.sh  readme.md  readme_zh-cn.md
src/: CMakeLists.txt  main.cpp
